--- a/src/component/Header.scss
+++ b/src/component/Header.scss
@@ -4,7 +4,7 @@
 }
 
 header {
-    background-color: red;
+    background-image: url("https://garden.spoonflower.com/c/5199352/p/f/m/2pd8Iw2-tr4lENfHO_k_tNwJ4avFn-5LR5RXNS0JOKSv3EPV9jwGuMF3Av4/little%20prince's%20crowns%20-%20yellow%20on%20aqua.jpg");
 }
 
 ul {
@@ -14,7 +14,7 @@ ul {
 }
 
 a, li {
-    color: white;
+    color: rgb(38, 37, 37);
     text-decoration: none;
     list-style: none;
     margin-right: 35px;
@@ -23,11 +23,7 @@ a, li {
 
 h1 {
     text-align: center;
-    color: rgb(240, 237, 230);
+    color: rgb(38, 37, 37);
     padding-top: 20px;
 }
 
-.logo {
-    width: 225px;
-    margin-right: 800px;
-}
