Add TV Speakers

--- a/src/component/Header.scss
+++ b/src/component/Header.scss
@@ -21,6 +21,12 @@ a, li {
 
 }
 
+.colormenu {
+    color: rgb(27, 27, 75);
+    font-weight: bold;
+    text-decoration: underline;
+}
+
 h1 {
     text-align: center;
     color: rgb(38, 37, 37);
