--- a/src/page/HomePage.scss
+++ b/src/page/HomePage.scss
@@ -12,3 +12,13 @@ h2,h3 {
     display: flex;
     flex-direction: column;
 }
+
+.maClasse{
+    background-color: aqua;
+
+}
+
+.maClasseActive{
+    background-color: pink;
+
+}
